Closed Bug 192346 Opened 22 years ago Closed 21 years ago

incremental search in <tree>/<menulist>/<listbox> fails if item starts with repeats of a letter

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: yuanyi21, Assigned: yuanyi21)

Details

Attachments

(2 files)

3.25 KB, application/vnd.mozilla.xul+xml
Details
8.45 KB, patch
john
: review+
Henry.Jia
: superreview+
Details | Diff | Splinter Review
Same as bug 188199, fix it for the consistent behavior of
<tree>/<menulist>/<listbox>.
Attached file testcase
Attached patch the fixSplinter Review
this is the fix for menulist/listbox/tree.
neil: this patch includes your fix for bug 154681.
Status: NEW → ASSIGNED
Attachment #114166 - Flags: superreview?(Henry.Jia)
Attachment #114166 - Flags: review?(jkeiser)
Comment on attachment 114166 [details] [diff] [review]
the fix

Looks the same as the other code in listbox, r=me
Attachment #114166 - Flags: review?(jkeiser) → review+
Comment on attachment 114166 [details] [diff] [review]
the fix

Seems good. sr=Henry
Attachment #114166 - Flags: superreview?(Henry.Jia) → superreview+
checked in!
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
vrfy'd fixed with 2003.03.13 comm trunk.

side note: i thought the attached test case was cool, so attempted to save it.
when i reopened it, i got a crash. likely not related to this bug, but filed bug
197234.
Status: RESOLVED → VERIFIED
Component: Keyboard: Navigation → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: