Bug 192346 incremental search in <tree>/<menulist>/<listbox> fails if item starts with repeats of a letter r=jkeiser, sr=henry.jia